2008-06-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/factory.h, itpp/base/mat.h, itpp/base/matfunc.h,
	itpp/base/timing.cpp, itpp/base/vec.h, itpp/comm/bch.cpp,
	itpp/comm/channel.cpp, itpp/comm/convcode.cpp,
	itpp/comm/egolay.cpp, itpp/comm/hammcode.cpp, itpp/comm/ldpc.h,
	itpp/comm/modulator.cpp, itpp/comm/punct_convcode.cpp,
	itpp/comm/reedsolomon.cpp, itpp/fixed/cfix.h, itpp/fixed/cfixed.h,
	itpp/fixed/fix.h, itpp/fixed/fix_functions.h,
	itpp/protocol/tcp.cpp, itpp/protocol/tcp.h,
	itpp/stat/misc_stat.cpp, itpp/stat/mog_diag.cpp,
	itpp/stat/mog_diag.h, itpp/stat/mog_diag_em.cpp: Suppress MSVC++
	warning C4100: "unreferenced formal parameter"

	This warning is suppressed by omitting named parameters in
	arguments of functions. Only types of parameters are passed.

	* configure.ac.in: Change default debugging flags to "-g -O1" or
	"-Wall -ggdb -O1 -pipe"

	The latter set is only used when GCC compiler is used, so it
	implicitly assumes that GDB debugger will be used in such a case.

2008-05-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/math/log_exp.h, itpp/srccode/gmm.h: Remove functions
	marked as deprecated before 3.10.7 release

	GMM::get_no_mixtures() was replaced a long time ago with
	GMM::get_no_gaussians(), whereas needed_bits() was replaced with
	either int2bits() or levels2bits(). Therefore it is the highest
	time to remove the deprecated interfaces in our development
	branch.

2008-05-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/users_guide.doc: Minor documentation fix in Users
	Guide

	There is no such functions as swap_row() and swap_col() in IT++.
	swap_rows() and swap_cols() are the proper ones. This fixes bug
	[1968377]. Thanks to Allan Murray for reporting this issue.

2008-05-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel/hyperg.cpp, itpp/base/itfile.cpp,
	itpp/base/random.cpp, itpp/comm/punct_convcode.cpp,